<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bottom_nav_ui.discover.DiscoverFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/notes"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/personal_messages_to_you"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_8"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@color/grey" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />


            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginBottom="10dp"
                android:text="@string/tap_to_review_50_notes"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

        </FrameLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tvInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/interested_in_you"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="@+id/cvImage"
        app:layout_constraintTop_toBottomOf="@+id/cvImage" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/premium_members_can_view_all_their_likes_at_once"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="@+id/tvInterest"
        app:layout_constraintTop_toBottomOf="@+id/tvInterest" />

    <Button
        android:id="@+id/btnUpgrage"
        style="@style/button_yellow_contiue"
        android:background="@drawable/yellow_round_btn"
        android:text="@string/upgrade"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvivImage"
        app:layout_constraintTop_toBottomOf="@+id/cvImage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvivImage"
        style="@style/cardView_image"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivProfile1"
                style="@style/blur_image" />

            <TextView
                android:id="@+id/tvNameblur1"
                style="@style/textView_blur_image" />

        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvivImage1"
        style="@style/cardView_image"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvivImage"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/ivProfile2"
            style="@style/blur_image" />

        <TextView
            android:id="@+id/tvNameblur2"
            style="@style/textView_blur_image" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
