<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/mobileNumberFragment">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.nero.aisle.ui.bottom_nav_ui.discover.DiscoverFragment"
        android:label="@string/title_Discover"
        tools:layout="@layout/fragment_discover">
        <action
            android:id="@+id/action_navigation_discover_to_navigation_notes"
            app:destination="@id/navigation_notes" />
        <action
            android:id="@+id/action_navigation_discover_to_navigation_matches"
            app:destination="@id/navigation_matches" />
        <argument
            android:name="token"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.nero.aisle.ui.bottom_nav_ui.notes.NotesFragment"
        android:label="@string/title_Notes"
        tools:layout="@layout/fragment_notes">
        <action
            android:id="@+id/action_navigation_notes_to_navigation_matches"
            app:destination="@id/navigation_matches" />
        <action
            android:id="@+id/action_navigation_notes_to_navigation_discover"
            app:destination="@id/navigation_discover" />
    </fragment>

    <fragment
        android:id="@+id/navigation_matches"
        android:name="com.nero.aisle.ui.bottom_nav_ui.matches.MatchesFragment"
        android:label="@string/title_Matches"
        tools:layout="@layout/fragment_matches">
        <action
            android:id="@+id/action_navigation_matches_to_navigation_discover"
            app:destination="@id/navigation_discover" />
    </fragment>
    <fragment
        android:id="@+id/mobileNumberFragment"
        android:name="com.nero.aisle.ui.MobileNumberFragment"
        android:label="fragment_mobile_number"
        tools:layout="@layout/fragment_mobile_number">
        <action
            android:id="@+id/action_mobileNumberFragment_to_OTPFragment"
            app:destination="@id/OTPFragment" />
    </fragment>
    <fragment
        android:id="@+id/OTPFragment"
        android:name="com.nero.aisle.ui.OTPFragment"
        android:label="fragment_o_t_p"
        tools:layout="@layout/fragment_o_t_p">
        <action
            android:id="@+id/action_OTPFragment_to_mobileNumberFragment"
            app:destination="@id/mobileNumberFragment" />
        <action
            android:id="@+id/action_OTPFragment_to_navigation_discover"
            app:destination="@id/navigation_discover"
            app:popUpTo="@id/mobileNumberFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="number"
            app:argType="string" />
        <action
            android:id="@+id/action_OTPFragment_to_navigation_discover2"
            app:destination="@id/navigation_discover" />
    </fragment>
</navigation>